syntax = "proto3";

option go_package = "proto";

package proto;

service HurraAgent {
    rpc MountDrive(MountDriveRequest) returns (MountDriveResponse) {}
    rpc UnmountDrive(UnmountDriveRequest) returns (UnmountDriveResponse) {}
    rpc GetDrives(GetDrivesRequest) returns (GetDrivesResponse) {}
    rpc LoadImage(LoadImageRequest) returns (LoadImageResponse) {}
    rpc UnloadImage(UnloadImageRequest) returns (UnloadImageResponse) {}
    rpc RunContainers(ContainersRequest) returns (ContainersResponse) {}
    rpc StopContainers(ContainersRequest) returns (ContainersResponse) {}
    rpc RemoveContainers(ContainersRequest) returns (ContainersResponse) {}
    rpc ExecInContainer(ExecInContainerRequest) returns (ExecInContainerResponse) {}

    rpc ExecCommand(Command) returns (Result) {}
}

message ContainersRequest {
    string name = 1;
    string context = 2;
    string spec = 3;
}

message ContainersResponse {
}

message ExecInContainerRequest {
    string name = 1;
    string context = 2;
    string spec = 3;
    string container_name = 4;
    string cmd = 5;
}

message ExecInContainerResponse {
}


message LoadImageRequest {
    string URL = 1;
}

message LoadImageResponse {

}

message UnloadImageRequest {
    string tag = 1;
}

message UnloadImageResponse {

}



message MountDriveResponse {
    repeated string errors = 1;
    bool is_successful = 2;
}

message MountDriveRequest {
    string device_file = 1;
    string mount_point = 2;
}

message UnmountDriveRequest {
    string device_file = 1;
}

message UnmountDriveResponse {
    string error = 1;
    bool is_successful = 2;
}

message GetDrivesRequest {
}

message GetDrivesResponse {
    repeated Drive drives = 1;
}

message Drive {
    string name = 1;
    string device_file = 2;
    uint64 size_bytes = 3;
    bool is_removable = 4;
    string type = 5;
    string serial_number = 6;
    string storage_controller = 7;
    repeated Partition partitions = 8;
}

message Partition {
    string name = 1;
    string device_file = 2;
    uint64 size_bytes = 3;
    uint64 available_bytes = 4;
    string filesystem = 5;
    string mount_point = 6;
    string label = 7;
    bool is_read_only = 8;

}

message Result {
  int32 exitCode = 1;
  string message = 2;
}

message Command {
  string command = 1;
}

